# TerrariaAIHelpDesk

./: .gitignore  README.md  crawl_and_insert.py  deepCrawling.py  main.py  pyproject.toml  requirements.txt  site_pages.sql  streamlit_ui.py  terraria_ai_helpdesk.py  vector.py
chrome_langchain_db/: chroma.sqlite3
server/: api.py
